add count component

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.count {
+  font-weight: bold;
+  font-size: 20px;
+  width: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.count span {
+  cursor: pointer;
 }
