--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,16 @@ body {
   padding: 30px;
 }
 
-.count {
+#count {
   font-weight: bold;
   font-size: 20px;
   width: 50px;
   display: flex;
   justify-content: space-around;
+}
+
+hr {
+  margin: 50px auto;
 }
 
 .count span {
